--- a/style.css
+++ b/style.css
@@ -195,22 +195,20 @@ footer {
 
 }
 
-@media (max-width: 1400px) { 
+@media (min-width: 379px) { 
 
-    /* .music_sm_spacer {
-        width: 350px;
-    }
+   .pic_holder {
+    margin-left: 60px;
+   
+   }
 
-    .music_sm_spacer:nth-of-type(1) {
-        margin-left: 7.6rem;
-    }
-
-    .music_sm_spacer:nth-of-type(2) {
-       
-    } */
+   .music_text_box {
+    margin-left: 3.5rem;
+   }
 
 
 }
+
 
 
 
